fix: remove orbit controls on mobile

--- a/Home/src/App.css
+++ b/Home/src/App.css
@@ -46,6 +46,7 @@
 @media screen and (max-width: 450px) {
   #canvas-wrapper {
     top: -70px !important;
+    pointer-events: none !important;
   }
   .heading {
     font-size: 1.4rem;
